--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 <a href="#"><i class="fa-brands fa-instagram" title="Goes to instagram"></i></a>
                 <a href="#"><i class="fa-brands fa-github" title="Goes to instagram"></i></a>
             </div>
-            <a href="#" class="btn">Download CV</a>
+            <a href="#" download="shravani_resume" class="btn">Download CV</a>
         </div>
         <div class="home-img">
             <img src="NEWSECTIONIMG.jpg" alt="">
@@ -217,7 +217,7 @@
             <p>Copyright &copy; 2025 by @ Shravani  | All Rights Reserved</p>
         </div>
 
-        <div class="footer-Icontop">
+        <div class="footer-Icontop" id="iconTop">
             <a href="#home"><i class="fa-solid fa-angle-up"></i></a>
         </div>
     </footer>
